--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,6 +12,9 @@ img {
     max-width: 100vw;
 }
 
+
+/*//*//*//*//*//* HEADER /*//*//*//*//*/
+
 .main-header {
     background-color: #EAC926;
 }
@@ -21,17 +24,33 @@ h1, h2, h3 {
 }
 
 
-.burger-menu {
-    text-align: center;
-    color: white;
-    line-height: 60px;
+.encabezado{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.logo {
+    margin: 20px 0px 20px 0px;
+    width: 50%;
 }
 
 
-.fas.fa-bars {
-    background-color: #0045ab;
-    padding: 10px;
-    border-radius: 6px;
+.barra-busqueda{
+    width: 30vw;
+}
+
+
+.form{
+    width: 50%;
+    font-size: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    text-align: center;  
+    color: #03264C;
+    height: 100%;
+    align-self: center;
+
 }
 
 i.fa-search {
@@ -48,34 +67,38 @@ i.fa-search {
 
 .titular {
     color: #666;
-}
-
-
-.encabezado {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-}
-
-
-.logo {
-    margin: 20px 0px 20px 0px;
-    width: 50%;
-}
-
-.titular {
     margin-bottom: 0px;
 }
 
-.barra-busqueda{
-    width: 30vw;
+.burger-menu {
+    text-align: center;
+    color: white;
+    line-height: 60px;
 }
+
+.fas.fa-bars {
+    background-color: #0045ab;
+    padding: 10px;
+    border-radius: 6px;
+}
+
+
+/*//*//*//*//*//* MAIN /*//*//*//*//*/
 
 main {
     width: 90vw;
     margin: auto;
 }
 
+.titular {
+    color: #666;
+}
+
+.flex-productos {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
 
 article {
     border-top: solid 1px #ebebeb;
@@ -86,37 +109,6 @@ article {
 article:hover{
     box-shadow: 0px 0px 10px rgb(100 100 100)
 }
-
-.descuento {
-    color: #39b54a;
-}
-
-.barra-navegacion,
-.descripcion {
-    display: none;
-}
-
-.descripcion:hover{
-    display: block;
-}
-
-.titular {
-    color: #666;
-}
-
-
-.flex-conteiner {
-    display: flex;
-}
-
-.precio {
-    width: 30%;
-}
-
-.descuento {
-    width: 70%;
-}
-
 
 .fas.fa-truck {
     display: block;
@@ -135,41 +127,28 @@ article:hover{
     transform: rotate(-90deg);
 }
 
-
-
-.flex-productos {
+.flex-conteiner {
     display: flex;
-    flex-direction: column;
-    padding: 10px;
 }
 
-
-
-.form{
-    width: 50%;
-    font-size: 10px;
-    padding: 5px;
-    border-radius: 5px;
-    text-align: center;  
-    color: #03264C;
-    height: 100%;
-    align-self: center;
-
+.precio {
+    width: 30%;
 }
 
-
-.encabezado{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+.descuento {
+    width: 70%;
+    color: #39b54a;
 }
 
-
-.logo{
-    margin: 20px 0px 20px 0px;
-    width: 50%;
+.barra-navegacion,
+.descripcion {
+    display: none;
 }
- 
+
+.descripcion:hover{
+    display: block;
+}
+
 
 
 /*//*//*//*//*//* FOOTER /*//*//*//*//*/
