--- a/public/css/stylesregister.css
+++ b/public/css/stylesregister.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 
-
 body {
     font-family: 'Roboto';
 }
@@ -13,13 +12,15 @@ img {
     max-width: 100vw;
 }
 
+
+/*//*/
+/*//*/
+/*//* HEADER /*/
+/*//*/
+/*//*/
+
 .main-header {
     background-color: #EAC926;
-}
-
-.piePagina{
-    font-size: 12px;
-    margin-top: 0px;
 }
 
 h1,
@@ -29,36 +30,22 @@ h3 {
 }
 
 
-.burger-menu {
-    text-align: center;
-    color: white;
-    line-height: 60px;
+.encabezado {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+
+.logo {
+    margin: 20px 0px 20px 0px;
+    width: 50%;
 }
 
 
-.fas.fa-bars {
-    background-color: #0045ab;
-    padding: 10px;
-    border-radius: 6px;
+.barra-busqueda {
+    width: 30vw;
 }
 
-i.fa-search {
-    background-color: white;
-    padding: 2px;
-    border-radius: 4px;
-    color: #666;
-
-}
-
-
-.barra-navegacion,
-.descripcion {
-    display: none;
-}
-
-.titular {
-    color: #666;
-}
 
 .form {
     width: 50%;
@@ -72,21 +59,160 @@ i.fa-search {
 
 }
 
-.encabezado {
+i.fa-search {
+    background-color: white;
+    padding: 2px;
+    border-radius: 4px;
+    color: #666;
+}
+
+
+.barra-navegacion,
+.descripcion {
+    display: none;
+}
+
+.titular {
+    color: #666;
+    margin-bottom: 0px;
+}
+
+.burger-menu {
+    text-align: center;
+    color: white;
+    line-height: 60px;
+}
+
+.fas.fa-bars {
+    background-color: #0045ab;
+    padding: 10px;
+    border-radius: 6px;
+}
+
+
+
+
+/*/*/
+/*/*/
+/*//*/
+/*/*/
+/*//* FORMULARIO REGISTRO /*/
+/*//*/
+/*//*/
+/*//*/
+/*//*/
+
+.registro {
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
+    flex-flow: column wrap;
+    width: 100%;
+    padding: 1px;
+    background-color: #c6c2c2e3;
+    border-radius: 5px;
 }
 
+.formularioRegistro {
+    justify-content: center;
+    text-align: center;
+    margin: 10px 0px;
+    flex-flow: column wrap;
+    padding: 10px;
+}
 
-.logo {
-    margin: 20px 0px 20px 0px;
+.titular {
+    justify-content: center;
+    font-size: 14px;
+    padding: 2px;
+}
+
+input {
     width: 50%;
+    border-radius: 5px;
+    margin-bottom: 11px;
+    padding: 4px;
 }
 
-.barra-busqueda{
-    width: 30vw;
+.comprador,
+.vendedor {
+    display: flex;
+    flex-flow: column wrap;
+    padding: 9px 13px;
+    align-items: center;
+    align-content: center;
 }
+
+p.tituloUsuario,
+p.SeleccioneCategoria,
+.fechaNacimiento,
+.FotoUsuario {
+    font-size: 17px;
+}
+
+.checkboxCategoria label {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    flex-flow: column wrap;
+}
+
+.foto {
+    padding-top: 9px;
+    align-items: center;
+}
+
+.Contraseña {
+    padding: 5px
+}
+
+.botonForm {
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: #1259c3;
+    color: white;
+    height: 2rem;
+    border-radius: 4px;
+    margin: 10px 4vw;
+    flex-flow: row wrap;
+    width: 15%;
+    }
+
+
+
+
+
+/*/*/
+/*/*/
+/*//*/
+/*/*/
+/*//* Footer /*/
+/*//*/
+/*//*/
+/*//*/
+/*//*/
+
+footer {
+    text-align: center;
+}
+
+i.fas.fa-credit-card,
+i.fas.fa-gift,
+i.fas.fa-user-shield {
+    font-size: 2em;
+    margin-bottom: 10px;
+    color: #03264C;
+
+}
+
+.copyright {
+    text-align: left;
+    margin-top: 40px;
+}
+
+.piePagina {
+    font-size: 12px;
+    margin-top: 0px;
+}
+
 
 
 @media(min-width: 425px) {
@@ -148,110 +274,22 @@ i.fa-search {
 }
 
 @media(min-width: 769px) {
-    .flex-productos article{
+    .flex-productos article {
         width: 20%;
     }
 
-    .lista-footer{
+    .lista-footer {
         display: flex;
         box-sizing: border-box;
     }
 
-    .fas.fa-user-shield:hover, .fas.fa-gift:hover, .fas.fa-credit-card:hover {
-        color:rgb(103, 99, 99)
+    .fas.fa-user-shield:hover,
+    .fas.fa-gift:hover,
+    .fas.fa-credit-card:hover {
+        color: rgb(103, 99, 99)
     }
 
-    .piePagina{
+    .piePagina {
         padding: 7px;
     }
 }
-
-
-
-/*/ FOOTER /*/
-
-footer {
-    text-align: center;
-}
-
-i.fas.fa-credit-card,
-i.fas.fa-gift,
-i.fas.fa-user-shield {
-    font-size: 2em;
-    margin-bottom: 10px;
-    color: #03264C;
-
-}
-
-.copyright {
-    text-align: left;
-    margin-top: 40px;
-}
-
-.piePagina {
-    font-size: 12px;
-    margin-top: 0px;
-}
-/*/ FORMULARIO REGISTRO /*/
-
-.registro {
-    display: flex;
-    flex-flow: column wrap;
-    width: 100%;
-    padding: 1px;
-    background-color: #c6c2c2e3;
-    border-radius: 5px;
-}
-
-.formularioRegistro{
-    justify-content: center;
-    text-align: center;
-    margin: 10px 0px;
-    flex-flow: column wrap;
-    padding: 10px;
-}
-.titular{
-    justify-content: center;
-    font-size: 14px;
-    padding: 2px;
-}
-
-input  {    
-    width: 50%;
-    border-radius: 5px;
-    margin-bottom: 11px;
-    padding: 4px;
-}
-
-.comprador, .vendedor{
-    display: flex;
-    flex-flow: column wrap;
-    padding:9px 13px;
-    align-items: center;
-    align-content: center;
-}
-
-p.tituloUsuario, p.SeleccioneCategoria, .fechaNacimiento, .FotoUsuario{
-    font-size: 17px;
-}
-
-.checkboxCategoria label{
-    display: flex;
-    align-items: center;
-    padding: 5px;
-    flex-flow: column wrap;
-}
-
-.foto{
-    padding-top: 9px;
-    align-items: center;
-}
-
-.Contraseña{
-    padding: 5px
-}
-
-
-
-
-
