--- a/views/home.html
+++ b/views/home.html
@@ -34,14 +34,14 @@
             </div>
 
             <!-- PROMOCIONES -->
+                <div class="promociones">
+                    <p>
+                        <i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjeta de
+                        credito
+                    </p>
 
-            <div class="promociones">
-                <p>
-                    <i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjeta de
-                    credito
-                </p>
-
-            </div>
+                </div>
+          
 
 
 
@@ -52,11 +52,11 @@
 
                 <a href="/"> Ofertas </a>
 
-                <a href="home.html"> Tiendas oficiales </a>
+                <a href="/"> Tiendas oficiales </a>
 
-                <a href="home.html"> Vender </a>
+                <a href="/"> Vender </a>
 
-                <a href="home.html"> Ayuda </a>
+                <a href="/"> Ayuda </a>
             </nav>
 
             <nav class="barra-nav2">
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                         <div class="descripcion">
-                            Cafetera Moulinex 
+                            Cafetera Moulinex
                         </div>
                     </div>
 
