--- a/views/login.html
+++ b/views/login.html
@@ -78,10 +78,12 @@
             <div class="datos">
                 <div>
                     <input type="text" name="usuario" id="usuario" placeholder="Nombre de usuario">
+                    <span class="feedback"></span>
                 </div>
 
                 <div>
                     <input type="password" name="password" id="password" placeholder="Elegi tu contraseña">
+                    <span class="feedback"></span>
                 </div>
             </div>
             <div>
