--- a/views/home.html
+++ b/views/home.html
@@ -34,14 +34,15 @@
             </div>
 
             <!-- PROMOCIONES -->
-                <div class="promociones">
-                    <p>
-                        <i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjeta de
-                        credito
-                    </p>
 
-                </div>
-          
+           
+            <div class="promociones">
+                <p>
+                    <i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjeta de
+                    credito
+                </p>
+
+            </div>
 
 
 
@@ -64,7 +65,7 @@
 
                 <a href="/login"> Ingresá</a> <i class="fas fa-sign-in-alt"></i>
 
-                <a href="/carrito"> Mis compras </a> <i class="fas fa-shopping-basket"></i>
+                <a href="#"> Mis compras </a> <i class="fas fa-shopping-basket"></i>
             </nav>
         </section>
 
@@ -99,7 +100,7 @@
                             </div>
                         </div>
                         <div class="descripcion">
-                            Cafetera Moulinex
+                            Cafetera Moulinex 
                         </div>
                     </div>
 
