--- a/views/register.html
+++ b/views/register.html
@@ -43,21 +43,21 @@
         <section class="barra-navegacion">
             <nav class="barra-nav1">
 
-                <a href="home.html"> Ofertas </a>
+                <a href="#"> Ofertas </a>
 
-                <a href="home.html"> Tiendas oficiales </a>
+                <a href="#"> Tiendas oficiales </a>
 
-                <a href="home.html"> Vender </a>
+                <a href="#"> Vender </a>
 
-                <a href="home.html"> Ayuda </a>
+                <a href="#"> Ayuda </a>
             </nav>
 
             <nav class="barra-nav2">
-                <a href="register.html"> Creá tu cuenta</a><i class="far fa-address-card"></i>
+                <a href="/registro"> Creá tu cuenta</a><i class="far fa-address-card"></i>
 
-                <a href="home.html"> Ingresá</a> <i class="fas fa-sign-in-alt"></i>
+                <a href="/login"> Ingresá</a> <i class="fas fa-sign-in-alt"></i>
 
-                <a href="home.html"> Mis compras </a> <i class="fas fa-shopping-basket"></i>
+                <a href="#"> Mis compras </a> <i class="fas fa-shopping-basket"></i>
             </nav>
         </section>
 
