--- a/views/home.html
+++ b/views/home.html
@@ -21,7 +21,7 @@
 
             <!-- LOGO -->
             <div class="logo">
-                <img class="logo-ml" src="imagenes/logo-mercado-liebre.svg" alt="Logo mercado liebre">
+                    <img class="logo-ml" src="imagenes/logo-mercado-liebre.svg" alt="Logo mercado liebre">
             </div>
 
             <!-- BARRA BUSQUEDA -->
@@ -51,21 +51,21 @@
         <section class="barra-navegacion">
             <nav class="barra-nav1">
 
-                <a href="/"> Ofertas </a>
+                <a class="categ" href="/"> Ofertas </a>
 
-                <a href="/"> Tiendas oficiales </a>
+                <a class="categ" href="/"> Tiendas oficiales </a>
 
-                <a href="/"> Vender </a>
+                <a class="categ" href="/"> Vender </a>
 
                 <a href="/"> Ayuda </a>
             </nav>
 
             <nav class="barra-nav2">
-                <a href="/registro"> Creá tu cuenta</a><i class="far fa-address-card"></i>
+                <a class="categ" href="/registro"> Creá tu cuenta</a><i class="far fa-address-card"></i>
 
-                <a href="/login"> Ingresá</a> <i class="fas fa-sign-in-alt"></i>
+                <a class="categ" href="/login"> Ingresá</a> <i class="fas fa-sign-in-alt"></i>
 
-                <a href="#"> Mis compras </a> <i class="fas fa-shopping-basket"></i>
+                <a class="categ" href="#"> Mis compras </a> <i class="fas fa-shopping-basket"></i>
             </nav>
         </section>
 
@@ -247,21 +247,21 @@
             <ul class="lista-footer" type="none">
                 <li>
                     <i class="fas fa-credit-card"></i>
-                    <h3> Pagá con tarjeta o en efectivo </h3>
+                    <h4> Pagá con tarjeta o en efectivo </h4>
                     <p class="piePagina"> Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                         puntos de pago. ¡Y siempre es seguro!
                     </p>
                 </li>
                 <li>
                     <i class="fas fa-gift"></i>
-                    <h3> Envío gratis desde $ 2.500 </h3>
+                    <h4> Envío gratis desde $ 2.500 </h4>
                     <p class="piePagina"> Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                         productos. Es un beneficio de Mercado Puntos.
                     </p>
                 </li>
                 <li>
                     <i class="fas fa-user-shield"></i>
-                    <h3> Seguridad, de principio a fin </h3>
+                    <h4> Seguridad, de principio a fin </h4>
                     <p class="piePagina"> ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                         porque estás siempre protegid@.
                     </p>
