--- a/views/register.html
+++ b/views/register.html
@@ -19,7 +19,7 @@
 
             <!-- LOGO -->
             <div class="logo">
-                <img class="logo-ml" src="imagenes/logo-mercado-liebre.svg" alt="Logo mercado liebre">
+                    <img class="logo-ml" src="imagenes/logo-mercado-liebre.svg" alt="Logo mercado liebre">
             </div>
 
             <!-- BARRA BUSQUEDA -->
@@ -75,8 +75,8 @@
                 <h3>REGISTRARSE</h3>
             </div>
             <fieldset class="datosPersonales">
-                <div>
-                    <input type="text" name="nombre" id="nombre" placeholder="Nombre y apellido">
+                <div class="datos">
+                    <input  type="text" name="nombre" id="nombre" placeholder="Nombre y apellido">
                     <span class="feedback"></span>
                 </div>
 
@@ -103,7 +103,7 @@
             </fieldset>
 
             <fieldset class="PerfilUsuario">
-                <div>
+                <div class="comp-vend">
                     <p class="tituloUsuario">Perfil del usuario</p>
                     <label class="comprador" for=Comprador> Comprador <input type="radio" name="Comprador-vendedor"
                             value="Comprador">
@@ -167,21 +167,21 @@
             <ul class="lista-footer" type="none">
                 <li>
                     <i class="fas fa-credit-card"></i>
-                    <h3> Pagá con tarjeta o en efectivo </h3>
+                    <h4> Pagá con tarjeta o en efectivo </h4>
                     <p class="piePagina"> Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                         puntos de pago. ¡Y siempre es seguro!
                     </p>
                 </li>
                 <li>
                     <i class="fas fa-gift"></i>
-                    <h3> Envío gratis desde $ 2.500 </h3>
+                    <h4> Envío gratis desde $ 2.500 </h4>
                     <p class="piePagina"> Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                         productos. Es un beneficio de Mercado Puntos.
                     </p>
                 </li>
                 <li>
                     <i class="fas fa-user-shield"></i>
-                    <h3> Seguridad, de principio a fin </h3>
+                    <h4> Seguridad, de principio a fin </h4>
                     <p class="piePagina"> ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                         porque estás siempre protegid@.
                     </p>
